@@ -1,7 +1,7 @@
 import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform
 
 plugins {
-    id 'org.beryx.jlink' version '2.24.4'
+    id 'org.beryx.jlink' version '2.26.0'
     id 'org.jreleaser' version '1.3.1'
 }
 
@@ -51,6 +51,7 @@ List<String> runArgs = [
         "--add-exports", "javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
         "--add-opens", "com.google.gson/com.google.gson.internal=io.sentry",
         "--add-opens", "java.base/java.lang.reflect=com.jfoenix",
+        '-XX:+UseZGC',
         "-Dfile.encoding=UTF-8",
         "-Xmx8G"]
 
@@ -65,7 +66,6 @@ jlink {
     imageDir = file("$buildDir/image")
     options = [
             // '--strip-debug',
-            '--compress', '2',
             '--no-header-files',
             '--no-man-pages']
 
@@ -160,7 +160,7 @@ task copyStartScripts(type: Copy) {
 
 jpackage.finalizedBy(writeVersion, copyResources, copyLang, copyStartScripts)
 
-task createDist(type: Zip, dependsOn: jpackage) {
+task createDist(type: Zip, dependsOn: [jpackage, copyResources, copyLang, copyStartScripts]) {
     destinationDirectory = buildDir
     archivesBaseName = "pdx_unlimiter"
     archiveAppendix = DefaultNativePlatform.currentOperatingSystem.windows ? "windows" : DefaultNativePlatform.currentOperatingSystem.linux ? "linux" : "mac"
